--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -10,3 +10,98 @@ canvas {
   height: auto;
   display: block; 
 }
+
+main {
+  position: relative;
+  width: 100%;
+}
+
+.container {
+  position: relative;
+  width: 100%;
+  padding: 40px;
+}
+
+.container p {
+  color: #fff;
+  font-size: 24px;
+  line-height: 2;
+  max-width: 720px;
+}
+.header{
+  position: fixed;
+  left:0;
+  top:0;
+  width: 100%;
+  z-index: 10;
+}
+.t1{
+  position: absolute;
+  margin:auto;
+  top:190px;
+  left:0;
+  right:0;
+  /* width: 64vw; */
+}
+.t2{
+  position: absolute;
+  margin:auto;
+  top:190px;
+  left:200px;
+  width: 600px;
+  z-index: 100;
+}
+.t3{
+  position: absolute;
+  margin:auto;
+  top:190px;
+  right:120px;
+  width: 600px;
+  z-index: 100;
+}
+.t4{
+  position: absolute;
+  margin:auto;
+  top:120px;
+  left:40px;
+  width: 600px;
+  z-index: 100;
+}
+.threejs-container {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 2;
+}
+
+section {
+
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  background-color: #111 !important;
+}
+
+.section-one {
+  background-color: blue;
+  /* height: 120vh; */
+}
+
+.section-two {
+  background-color: steelblue;
+  height: 200vh;
+}
+
+.section-three {
+  background-color: crimson;
+}
+
+.section-four {
+  background-color: lime;
+}
+
+.section-five {
+  background-color: grey;
+}
